Add internal CSS to p element

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,7 +7,11 @@
     <title>Methods for Adding CSS</title>
     <link href="main.css" rel="stylesheet">
     <style type="text/css">
-      
+      p {
+        background-color: green;
+        color: white;
+        font-size: 1.5rem;
+      }
     </style>
   </head>
   <body>
